sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: not found: value PlusGrand
      if (PlusGrand(j,j+1)){
          ^