sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <- 0 to getNombreValeurs()){
    for (j <- 0 to getNombreValeurs()-i -1){
      if (PlusGrand(j,j+1)){
        echange(j,j+1)
      }
    }
  }
}